[package]
edition = "2021"
name = "group_project"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
nalgebra = {version = "0.31.4", features = ["bytemuck"]}
num-traits = "0.2.15"
obj-rs = "0.7"
png = "0.17.7"
serde = "1.0.147"
serde_json = "1.0.88"
vulkano = "0.32.1"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"
